# ClawPP-Agent

./: .gitignore  ARCHITECTURE_QUICKSTART_CN.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  FIXES_SUMMARY.md  IMPLEMENTATION_REPORT_2026-04-01.md  LICENSE  PLAN.md  PLAN_IMPLEMENTATION_GAPS.md  PROJECT_README.md  README.md  README_EN.md  README_ZH.md  VERIFICATION_CHECKLIST.md  VIDEO_SCRIPT_6MIN_CN.md  WORKSPACE_SETUP.md  build_installer.bat  build_project.bat  claude_code_agent_plan.md
.trae/documents/: clawpp-refactor-and-enhancement-plan.md  phase1-completion-status.md
config/: default_config.json
config/package/: config.xml  controlscript.js
qml/: ClawPP.qmlproject  ClawPP.qrc  DesignTokens.qml  Main.qml  Main.ui.qml  qml.qrc
qml/components/: AppShell.qml  ChatBubble.qml  ChatComposer.qml  FrostedDialog.qml  FrostedOverlay.qml  FrostedPanel.qml  GlassCard.qml  RippleButton.qml  RippleEffect.qml  SessionActionsBar.qml  SessionRow.qml  SidebarItem.qml  SidebarPanel.qml  WorkspaceHeader.qml  WorkspacePanel.qml
resources/: resources.qrc
resources/styles/: default.qss
skills/cmake/: SKILL.md
skills/cpp_analysis/: SKILL.md
skills/git/: SKILL.md
src/: main.cpp  types.cpp
src/agent/: agent_profile.cpp  agent_profile.h  agent_profile_manager.cpp  agent_profile_manager.h  context_builder.cpp  context_builder.h  i_agent_core.h  react_agent_core.cpp  react_agent_core.h
src/application/: agent_orchestrator.cpp  agent_orchestrator.h  agent_service.cpp  agent_service.h  session_manager.cpp  session_manager.h  session_thread.cpp  session_thread.h  template_loader.cpp  template_loader.h
src/common/: constants.h  model_context_limits.h  result.h  types.h
src/infrastructure/config/: config_manager.cpp  config_manager.h
src/infrastructure/database/: conversation_store.cpp  conversation_store.h  database_manager.cpp  database_manager.h  session_store.cpp  session_store.h
src/infrastructure/event/: event_bus.cpp  event_bus.h  events.h
src/infrastructure/logging/: logger.cpp  logger.h
src/infrastructure/network/: external_platform_manager.cpp  external_platform_manager.h  http_client.cpp  http_client.h  sse_parser.cpp  sse_parser.h
src/infrastructure/runner/: runner_manager.cpp  runner_manager.h
src/memory/: conversation_history.cpp  conversation_history.h  i_memory_system.h  memory_manager.cpp  memory_manager.h
src/permission/: bash_analyzer.cpp  bash_analyzer.h  permission_manager.cpp  permission_manager.h
src/provider/: anthropic_provider.cpp  anthropic_provider.h  gemini_provider.cpp  gemini_provider.h  i_llm_provider.h  openai_provider.cpp  openai_provider.h  provider_manager.cpp  provider_manager.h
src/qml/: qml_backend.cpp  qml_backend.h  qml_models.cpp  qml_models.h
src/runner/: main.cpp
src/skill/: skill.cpp  skill.h  skill_manager.cpp  skill_manager.h
src/tool/: i_tool.cpp  i_tool.h  tool_executor.cpp  tool_executor.h  tool_registry.cpp  tool_registry.h
src/tool/tools/: edit_file_tool.cpp  edit_file_tool.h  filesystem_tool.cpp  filesystem_tool.h  list_directory_tool.cpp  list_directory_tool.h  network_tool.cpp  network_tool.h  read_file_tool.cpp  read_file_tool.h  search_files_tool.cpp  search_files_tool.h  shell_tool.cpp  shell_tool.h  subagent_tool.cpp  subagent_tool.h  system_tool.cpp  system_tool.h  write_file_tool.cpp  write_file_tool.h
src/ui/: chat_view.cpp  chat_view.h  main_window.cpp  main_window.h  session_panel.cpp  session_panel.h
src/ui/dialogs/: extracted_dialogs.cpp  extracted_dialogs.h  memory_dashboard_dialog.cpp  memory_dashboard_dialog.h  permission_dialog.cpp  permission_dialog.h
templates/: SOUL.md
tests/: test_core.cpp
(+9 files in other folders)
